--- a/day02/text_content.html
+++ b/day02/text_content.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <style>
       div {
+        display: block;
         height: 100vh;
       }
       div[name="n1"] {
@@ -15,7 +16,7 @@
         background-color: yellow;
       }
       div[name="n2"],
-      div[name="n2"] {
+      div[name="n4"] {
         background-color: brown;
       }
     </style>
@@ -58,8 +59,8 @@
     </p>
 
     <div id="n1">N1</div>
-    <div id="n2">N2</div>
-    <div id="n3">N3</div>
+    <div name="n2">N2</div>
+    <div name="n3">N3</div>
     <div id="n4">N4</div>
   </body>
 </html>
