firebase repo 따로 관리

--- a/day02/form_member_manage.html
+++ b/day02/form_member_manage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원 관리 페이지</title>
+    <link rel="stylesheet" href="./common.css">
     <!-- 인터널 방식(내부 설정 방식) -->
     <style>
         .saveBtn {
