--- a/day02/form_member_manage.html
+++ b/day02/form_member_manage.html
@@ -43,6 +43,9 @@
             border-top: 0 solid black;
             border-bottom: 1 solid black;
         }
+        .subTbl tr>td:first-child {
+            border-right: 1 solid black;
+        }
         div.container {
             margin: auto;
             max-width: 800px;
