--- a/day03/day03ex01.html
+++ b/day03/day03ex01.html
@@ -47,6 +47,22 @@
       //     })
       //   }
 
+
+      const hoverEvent = (e) => {
+        e.
+      }
+
+      window.onload() = function() {
+        var changeBtn = document.getElementById("changeBtn");
+
+        changeBtn.addEventListener("click", function () {
+          demo.innerHTML = "버튼 클릭";
+          //   demo.innerHTML  "<h2>버튼이 클릭되었따!!</h2>";
+          demo.className = demo.className === "" ? "btnClicked" : "";
+        });
+
+      }
+
       window.onload = function () {
         var changeBtn = document.getElementById("changeBtn"); // 여기 window.onload 이벤트 내부 함수의 변수로는 let 이 좋아 var이 좋아..?
 
@@ -55,6 +71,23 @@
           //   demo.innerHTML  "<h2>버튼이 클릭되었따!!</h2>";
           demo.className = demo.className === "" ? "btnClicked" : "";
         });
+
+        // querySelector() : 거진 css 에서 쓰는 선택자를 그대로 쓴다고 생각하면 편하다
+        // id는 #으로 했었제..
+        // class는 .
+        // 속성은 tag[attr=""]
+        // tag
+        var memoTxt = document.querySelector("input#memoTxt");
+
+        var demo = document.querySelector("demo");
+        var changeBtn = document.querySelector("changeBtn");
+        var resetBtn = document.querySelector("resetBtn");
+        console.log(demo);
+        console.log(changeBtn);
+        console.log(resetBtn);
+        console.log(memoTxt);
+
+        // TDD: 테스트 주도 개발 (테스트를 미리 짜놓고 하는 것) // 이건 아니긴 하지만서도.. 오류를 줄이기 위해 따로함 //테스터도 제대로 하려면 매ㅜ매우 어렵다
       };
     </script>
   </head>
@@ -63,6 +96,7 @@
 
     <p id="demo">JavaScript can change HTML content.</p>
 
+    메모: <input type="text" id="memoTxt" />
     <button type="button" id="changeBtn">Click Me!</button>
 
     <button type="button" id="resetBtn">Click Me!</button>
