--- a/day03_review/day03ex05todoList.html
+++ b/day03_review/day03ex05todoList.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .todo {
+        background: #fff;
+        border: none;
+      }
+    </style>
+
     <script>
-      var todoList = [
+      let todoList = [
         { seq: 101, title: "여행하기", done: false },
         { seq: 102, title: "포트폴리오 만들기", done: true },
         { seq: 103, title: "팀 프로젝트 하기", done: false },
         { seq: 104, title: "엄마 생일 선물 준비하기", done: false },
       ];
-      var seqCnt = 105;
+      let seqCnt = 105;
 
       window.onload = function () {
         var memoTxt = document.getElementById("memoTxt");
@@ -20,17 +27,39 @@
         var resetBtn = document.querySelector("#resetBtn");
 
         // 함수 선언
-        HTMLButtonElement.prototype.handleDelEvt = function (btn) {
+        HTMLButtonElement.prototype.editClickHandle = function (btn) {
           //console.dir(btn);
           // 트래버싱으로 상대적인 요소 찾기
           var trElement = btn.parentElement.parentElement;
           //console.log('handleDelEvt 호출 ...', btn.dataset.seq);
-          console.log("handleDelEvt 호출 ...", trElement.dataset.seq);
+          // console.log("handleDelEvt 호출 ...", trElement.dataset.seq);
+          var todo = trElement.querySelector(".todo");
+
+          // 질문사항? : html 요소 상태를 가지고 판단해도 되는가?
+          if (todo.diabled) {
+            todo.disabled = false;
+            btn.innerHTML = "수정완료";
+          } else {
+            todo.diabled = true;
+            btn.innerHTML = "수정";
+            drawList();
+          }
         };
 
-        HTMLButtonElement.prototype.editClickHandle = function () {
+        HTMLButtonElement.prototype.handleDelEvt = function () {
           console.log("delClickHandle");
         };
+        HTMLInputElement.prototype.todoChangedHandle = function (todo) {
+          var trElem = todo.parentElement.parentElement;
+          todoList.find((elem) => elem.seq == trElem.dataset.seq).title =
+            todo.value;
+        };
+
+        // const todoChangedHandle = function (todo) {
+        //   var trElem = todo.parentElement.parentElement;
+        //   todoList.find((elem) => elem.seq == trElem.dataset.seq).title =
+        //     todo.value;
+        // };
 
         // 자바스크립트 최상위 객체에 선언
         window.aaaa = function () {
@@ -46,7 +75,11 @@
             // 여러줄 문자열 따옴표(``)를 사용하면 템플릿 문자열로 사용 가능.
             demo.innerHTML += `<tr align="center" data-seq="${todoObj.seq}">
                         <td><input type="checkbox" onchange="window.aaaa(this)"></td>
-                        <td>${todoObj.title}</td>
+                        <td><input class="todo ${
+                          todoObj.done ? "done" : ""
+                        }" type="text" onchange="todoChangedHandle(this)" disabled value="${
+              todoObj.title
+            }"></input></td>
                         <td><button onclick="editClickHandle(this)">수정</button></td>
                         <td><button onClick="handleDelEvt(this)">삭제</button></td>
                     </tr>`;
@@ -57,13 +90,14 @@
         // 함수는 호출 해야 실행 된다.
         drawList();
 
-        var handleEvent = function (event) {
+        const handleEvent = function (event) {
           // todoList에 객체를 추가 한다. push()
           todoList.push({ seq: seqCnt++, title: memoTxt.value, done: false });
           drawList();
           memoTxt.value = "";
           memoTxt.focus();
         };
+
         clickBtn.addEventListener("click", handleEvent);
 
         memoTxt.onkeyup = function () {
