--- a/day05/day04ex05topmenu-mine.html
+++ b/day05/day04ex05topmenu-mine.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Document</title>
     <style>
       header {
@@ -49,7 +49,7 @@
         height: 100vh;
         text-align: center;
         border: 1px solid orange;
-      }
+      } 
       div.sticky {
         position: -webkit-sticky;
         position: sticky;
@@ -61,22 +61,22 @@
   </head>
   <body>
     <header>
-      <h1>범준샘의 소프트웨어 공작실</h1>
+      <h1>asdf</h1>
     </header>
     <div class="sticky">
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#profile">Profile</a></li>
-          <li><a href="">Gallery</a></li>
-          <li><a href="">Lecture</a></li>
-          <li><a href="">Shop</a></li>
+          <li><a href="#gallery">Gallery</a></li>
+          <li><a href="#lecture">Lecture</a></li>
+          <li><a href="#shop">Shop</a></li>
         </ul>
       </nav>
     </div>
     <div id="main">
       <div id="home">
-        <br /><br />
+        <br /><br /><!-- /br태그로 간격 맞춤 -->
         <h3>오신것을 환영합니다</h3>
       </div>
       <div id="profile">
@@ -84,12 +84,17 @@
         <h3>Profile</h3>
       </div>
       <div id="gallery">
+        <!-- </br></br> -->
+         <br><br>
         <h3>Gallery</h3>
       </div>
       <div id="lecture">
+        <!-- </br></br> -->
+         <br><br>
         <h3>Lecture</h3>
       </div>
       <div id="shop">
+        <br><br >
         <h3>Shop</h3>
       </div>
     </div>
