day07. 이벤트 분할1 - ex02

--- a/day07/ajax_ex01.html
+++ b/day07/ajax_ex01.html
@@ -46,8 +46,11 @@
           //   console.log(noCnt);
 
           const todoListArea = document.querySelector("#todoListArea");
-          todoList.forEach((elem) => {
-            console.log(elem);
+          todoList.forEach((todo) => {
+            // console.log(todo);
+            const liElement = document.createElement("li");
+            liElement.textContent = todo.title;
+            todoListArea.appendChild(liElement);
           });
         }
       };
