day07 실행되게 ex02

--- a/day07/ajax_ex02.html
+++ b/day07/ajax_ex02.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
+    <h2>todoList</h2>
+    <button id="loadBtn">불러오기</button>
     <ul id="todoListArea"></ul>
 
     <script>
