--- a/day09/day09ex01_stepmine.html
+++ b/day09/day09ex01_stepmine.html
@@ -72,13 +72,29 @@
         return liTag;
       } // End of createLiTag
 
+      var listArea = document.querySelector(".resultArea");
       function drawList() {
-        var listArea = document.querySelector(".resultArea");
         listArea.innerHTML = "";
         todoList.forEach(function (todo) {
           listArea.appendChild(createLiTag(todo));
         });
       }
+
+      //
+      // function drawList(mode) {
+      //   switch (mode) {
+      //     case 0: //init
+      //       drawList(); // 자바스크립트는 메소드 오버로딩 기능이 없다ㅋㅋ
+      //       break;
+      //     case 1: // 할일 추가
+      //       listArea.appendChild(createLiTag(todoList[todoList.length - 1]));
+      //       break;
+      //     case 2: // 할일 삭제
+      //       // todo no 정렬 및 카운트 초기화?
+      //       break;
+      //   }
+      // }
+
       drawList();
 
       // Array에 새 할 일 추가
